--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/strapi": "4.2.2",
     "better-sqlite3": "7.4.6",
     "pg": "^8.7.3",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "strapi-plugin-ckeditor5": "^2.1.1-rc.1"
   },
   "author": {
     "name": "A Strapi developer"
