--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.2.2",
+    "@strapi/plugin-seo": "^1.7.4",
     "@strapi/plugin-users-permissions": "4.2.2",
     "@strapi/provider-upload-cloudinary": "^4.2.2",
     "@strapi/strapi": "4.2.2",
